# study

./: README.md
forC++/1-Tongxunlu/: txl  txl.cpp
forC++/2-WorkerManageSystem/: boss.cpp  boss.h  employee.cpp  employee.h  main  main.cpp  manager.cpp  manager.h  worker.cpp  worker.h  workerManager.cpp  workerManager.h
forC++/Algorithm/quickSelect/: main.cpp
forC++/CQUPTACM/1/: main.cpp  stdinput.txt
forC++/CQUPTACM/10/: main.cpp
forC++/CQUPTACM/2/: main.cpp  stdinput.txt
forC++/CQUPTACM/3/: main.cpp  stdinput.txt
forC++/CQUPTACM/4/: main.cpp  stdinput.txt
forC++/CirclePoint/: Circle.cpp  Circle.h  Makefile  Point.cpp  Point.h  main  main.cpp
forC++/DataStrcture/hash/linkhash/: CMakeLists.txt
forC++/DataStrcture/list/sqlist/: CMakeLists.txt
forC++/DataStrcture/list/sqlist/code/sqlist/: sqlist.c  sqlist.h
forC++/DataStrcture/queue/linkqueue/: CMakeLists.txt  main.c
forC++/DataStrcture/queue/linkqueue/code/: linkqueue.c
forC++/DataStrcture/queue/sequeue/: CMakeLists.txt
forC++/DataStrcture/satck/linkstack/: CMakeLists.txt  main.c
forC++/DataStrcture/tree/: main.c
forC++/FeatureTest/static和const/: main.cpp
forC++/FeatureTest/内存对齐/: main.cpp
forC++/FeatureTest/字节序/: main.cpp
forC++/FeatureTest/联合体测试大小端/: main.cpp
forC++/JZOffer/JZ10斐波那契数列/: main.cpp
forC++/JZOffer/JZ11旋转数组的最小数字/: main.cpp
forC++/JZOffer/JZ12矩阵中的路径/: main.cpp
forC++/JZOffer/JZ13机器人的运动范围/: main.cpp
forC++/JZOffer/JZ14剪绳子/: main.cpp
forC++/JZOffer/JZ15二进制中1的个数/: main.cpp
forC++/JZOffer/JZ16数值的整数次方/: main.cpp
forC++/JZOffer/JZ17打印最大的n位数/: main.cpp
forC++/JZOffer/JZ18删除链表的节点/: main.cpp
forC++/JZOffer/JZ20表示数值的字符串/: main.cpp
forC++/JZOffer/JZ21调整数组顺序使奇数位于偶数前面/: main.cpp
forC++/JZOffer/JZ22链表倒数最后k个节点/: main.cpp
forC++/JZOffer/JZ23链表中环的入口结点/: main.cpp
forC++/JZOffer/JZ24反转链表/: main.cpp
forC++/JZOffer/JZ25合并两个排序的链表/: main.cpp
forC++/JZOffer/JZ26树的子结构/: main.cpp
forC++/JZOffer/JZ27二叉树的镜像/: main.cpp
forC++/JZOffer/JZ28对称的二叉树/: main.cpp
forC++/JZOffer/JZ29顺时针打印数组/: main.cpp
forC++/JZOffer/JZ30包含min函数的栈/: main.cpp
forC++/JZOffer/JZ31栈的压入、弹出序列/: main.cpp
forC++/JZOffer/JZ32从上往下打印数组/: main.cpp
forC++/JZOffer/JZ33二叉搜索树的后序遍历序列/: main.cpp
forC++/JZOffer/JZ5替换空格/: main.cpp
forC++/NN/: NN.cpp  NN.h  dataset.txt  main  main.cpp  model.txt
forC++/OOP_C/: CMakeLists.txt  main.c
forC++/OOP_C/class/Rectangle/: Rectangle.c  Rectangle.h
forC++/OOP_C/class/Shape/: Shape.c  Shape.h
forC++/RoutingAlgorithm/: main  main.cpp
forC++/Vector/: Vector.cpp  Vector.h  main.cpp
forC++/datastrcture/hash/linkhash/: CMakeLists.txt
forC++/datastrcture/list/linklist/: CMakeLists.txt
forC++/datastrcture/question_ballclock/: CMakeLists.txt  main.c
forC++/datastrcture/question_ballclock/code/lib/linkstack/: linkstack.h
forC++/datastrcture/question_ballclock/code/lib/sqstack/: sqstack.h
forC++/datastrcture/tree/: CMakeLists.txt  main.c
forC++/datastrcture/tree/code/lib/bitree/: bitree.h
forC++/datastrcture/tree/code/lib/linkqueue/: linkqueue.h
forC++/datastrcture/tree/code/lib/linkstack/: linkstack.h
forC++/datastrcture/tree/code/source/bitree/: bitree.c
forC++/datastrcture/tree/code/source/linkqueue/: linkqueue.c
forC++/onnxTest/arm_rtspTest_multhread/: CMakeLists.txt  main.cpp
forC++/onnxTest/videoTest/: CMakeLists.txt  main.cpp
forC++/onnxTest/videoTest_multhpread/: CMakeLists.txt  main.cpp
forC++/test/: Makefile  main  test  test.cpp
linuxdriver/1_hello_drv/: .hello_drv.ko.cmd  .hello_drv.mod.o.cmd  .hello_drv.o.cmd  hello_drv.c  hello_drv.ko  hello_drv.mod.c  hello_drv_app  modules.order
linuxdriver/2.1_led_drv/: .led_drv.ko.cmd  .led_drv.mod.o.cmd  .led_drv.o.cmd  led_drv.ko  led_drv.mod.c  ledtest  modules.order
linuxdriver/2.2_led_drv_template/: .100ask_led.ko.cmd  .100ask_led.mod.o.cmd  .100ask_led.o.cmd  .board_demo.o.cmd  .leddrv.o.cmd  100ask_led.ko  100ask_led.mod.c  Makefile  board_demo.c  led_opr.h  leddrv.c  ledtest  ledtest.c  modules.order
linuxdriver/2.3_led_drv_seperate/: README.mk  board_A_led.c  chip_demo_gpio.c  led_opr.h  led_resource.h
linuxdriver/2.4_led_drv_bus/: Makefile  board_A_led.c  chip_demo_gpio.c
linuxdriver/2.5_led_drv_devicetree/: 100ask_led.dts  Makefile  board_A_led.c  chip_demo_gpio.c
linuxdriver/2.6_led_drv_gpiosubsystem/: .leddrv.ko.cmd  .leddrv.mod.o.cmd  .leddrv.o.cmd  Makefile  leddrv.c  leddrv.ko  leddrv.mod.c  ledtest  modules.order
linuxdriver/2_led_drv/: Makefile  led_drv_app.c
linuxdriver/3.1_irq/: .gpio_key_drv.ko.cmd  .gpio_key_drv.mod.o.cmd  .gpio_key_drv.o.cmd  Makefile  gpio_key_drv.ko  gpio_key_drv.mod.c  modules.order
path_qt_project/01_QFile/: 01_QFile.pro  main.cpp  mainwindow.cpp  mainwindow.h
path_qt_project/NtpClock/: NtpClock.pro  global.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ntpclient.cpp  ntpclient.h
path_qt_project/OpenGLCubeDemo/: CMakeLists.txt  CubeWidget.cpp  CubeWidget.h  main.cpp
path_qt_project/OpenGLImageDemo/: CMakeLists.txt  ImageWidget.cpp  ImageWidget.h  main.cpp
path_qt_project/build-01_QFile-I_MX6ULL-Debug/: .qmake.stash  01_QFile  Makefile  moc_mainwindow.cpp  moc_predefs.h
path_qt_project/build-NtpClock-Desktop-Debug/: Makefile  NtpClock
path_qt_project/build-NtpClock-I_MX6ULL-Debug/: Makefile  NtpClock  moc_mainwindow.cpp  moc_ntpclient.cpp  ui_mainwindow.h
path_qt_project/build-dashboard-100ask_imx6ull-Debug/: Makefile  dashboard  qrc_dashboard.cpp
path_qt_project/build-player-100ask_imx6ull-Debug/: Makefile  histogramwidget.moc  moc_histogramwidget.cpp  moc_player.cpp  moc_playercontrols.cpp  moc_playlistmodel.cpp  moc_predefs.h  moc_videowidget.cpp  player
path_qt_project/build-player-Desktop_Qt_5_12_0_GCC_64bit-Debug/: Makefile  histogramwidget.moc  moc_histogramwidget.cpp  moc_player.cpp  moc_playercontrols.cpp  moc_playlistmodel.cpp  moc_videowidget.cpp
torchLearn/: cnn.ipynb  random.ipynb  tensor.ipynb  tensor_calculate.ipynb  tensor_numpy.ipynb  tensor_operator.ipynb
torchLearn/.ipynb_checkpoints/: auto_grad-checkpoint.ipynb  cnn-checkpoint.ipynb  dnn_train-checkpoint.ipynb  torch.nn-checkpoint.ipynb
(+604 files in other folders)
